# crisis-bench

./: .env.example  .env.production.example  .gitignore  Makefile  README.md  docker-compose.cpu.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  roadmap.md
.claude/: CLAUDE.md  settings.json
.claude/commands/: check-spec-deps.md  create-spec.md  explain-spec.md  implement-spec.md  start-spec-dev.md  verify-spec.md
.github/workflows/: benchmark_regression.yml  ci.yml  docker.yml
benchmark/: baseline.json
dashboard/: .dockerignore  .env.local.example  Dockerfile  jest.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
docker/: Dockerfile.api  Dockerfile.dashboard  nginx.conf
docs/: architecture.drawio
monitoring/: alerts.yml  prometheus.yml
scripts/: deploy.sh  health_check.sh  init_db.sql  init_langfuse_db.sh
specs/spec-S1.1-project-structure/: checklist.md  explanation.md  spec.md
specs/spec-S1.2-docker-compose/: checklist.md  explanation.md  spec.md
specs/spec-S1.3-env-config/: checklist.md  explanation.md  spec.md
specs/spec-S1.4-db-schema/: checklist.md  explanation.md  spec.md
specs/spec-S1.5-makefile/: checklist.md  explanation.md  spec.md
specs/spec-S2.1-domain-models/: checklist.md  explanation.md  spec.md
specs/spec-S2.2-db-connection/: checklist.md  explanation.md  spec.md
specs/spec-S2.3-redis-utils/: checklist.md  explanation.md  spec.md
specs/spec-S2.4-error-handling/: checklist.md  explanation.md  spec.md
specs/spec-S2.5-telemetry/: checklist.md  explanation.md  spec.md
specs/spec-S2.6-llm-router/: checklist.md  explanation.md  spec.md
specs/spec-S2.7-urgency-classifier/: checklist.md  explanation.md  spec.md
specs/spec-S2.8-cost-tracker/: checklist.md  explanation.md  spec.md
specs/spec-S3.1-api-gateway/: checklist.md  explanation.md  spec.md
specs/spec-S3.2-websocket/: checklist.md  explanation.md  spec.md
specs/spec-S3.3-dashboard-setup/: checklist.md  explanation.md  spec.md
specs/spec-S3.4-geo-map/: checklist.md  explanation.md  spec.md
specs/spec-S3.5-agent-panel/: checklist.md  explanation.md  spec.md
specs/spec-S3.6-metrics-panel/: checklist.md  explanation.md  spec.md
specs/spec-S3.7-timeline/: checklist.md  explanation.md  spec.md
specs/spec-S4.1-a2a-schemas/: checklist.md  explanation.md  spec.md
src/agents/: base.py  (+7 more)
tests/: conftest.py
(+258 files in other folders)
